# anilist_client

./: Cargo.toml  README.md  build.rs  graphql.config.yml
graphql/: schema.graphql
graphql/queries/: update_media_list.graphql  user_anime_list.graphql
src/: app.rs  lib.rs  main.rs
src/api/: auth.rs  client.rs  mod.rs  models.rs
src/api/models/: mod.rs
src/api/queries/: anime_details.graphql  anime_search.graphql  schema.graphql  user_profile.graphql  viewer.graphql
src/data/: cache.rs  database.rs  mod.rs
src/data/models/: mod.rs
src/resources/: README.md
src/resources/themes/: dark.json  default.json
src/ui/: app.rs  mod.rs  theme.rs
src/ui/components/: anime_card.rs  auth.rs  media_list.rs  mod.rs  user_stats.rs
src/ui/screens/: details.rs  home.rs  mod.rs  profile.rs  search.rs  settings.rs
src/utils/: config.rs  error.rs  icons.rs  logging.rs  mod.rs  ui_helpers.rs
