[package]
name = "anilist_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_auth"
path = "src/bin/test_auth.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
graphql_client = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "4.4"
webbrowser = "0.8"
url = "2.4"
iced = { version = "0.9", features = ["image", "tokio"] }
rusqlite = { version = "0.29", features = ["bundled"] }
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[build-dependencies]
graphql_client_codegen = "0.12.0"
