[package]
name = "anilist_client"
version = "0.1.0"
edition = "2021"
authors = ["Camniel <me@camniel.me>"]
description = "A desktop client for AniList built with Rust and Iced"
readme = "README.md"
license = "MIT"

[[bin]]
name = "test_auth"
path = "src/bin/test_auth.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
graphql_client = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "4.4"
webbrowser = "0.8"
url = "2.4"
iced = { version = "0.9", features = ["image", "tokio", "debug", "svg"] }
iced_native = "0.10.3"
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
image = "0.24"
once_cell = "1.18"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
winreg = { version = "0.51", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.51"

[build-dependencies]
graphql_client_codegen = "0.12.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true